[Added]
-2025_32    Added  option "minDropdownWidth": Width of the dropdowns will be minimum this width (minimum width is 50, or 125 if the search editbox header is enabled. Attention: If the minDropdownWidth is > than the max it will overwrite the maximum dropdown width that way!)


-v- ---------------LSM v2.35 - 2025-04-06--------------------------------------------------------------------------- -v-
[Fixed]
-2025_6:	If multiSelection is enabled: LSM test Entry having a submenu AND a callback is selectable -> should not be the case
-2025_7:	If multiselection is enabled: LSM test Maximum number of selectable entries (maxNumSelections) is not working (maybe after submenus were opened)
-2025_8:	Removed globally leaking variables
-2025_9:	If multiSelection is disabled: Entries opening a submenu, having a callback, do not select the submenu entry anymore
-2025_12:   multiselection options added will properly pass in the whole options table as param to the callback function now
-2025_13:	ContextMenu: Clicked outside will close the contextmenu now first and leave the other LSM menus opened
-2025_14:   For multiselect: Replace PlaySound with LSM sound handler for selected entry
-2025_16:   ContextMenu: Clicking a checkbox in a context menu's submenu will close the contextmenu. LSM test, entry "Submenu entry 6" -> nested submenus -> Checkbox
-2025_15:   ContextMenu: If one opens a nested submenu of a nested submenu, the total context menu closes all of sudden? LSM test, entry "Submenu entry 6" -> nested submenus -> OnMouseEnter of the 2nd depth submenu closes all
-2025_17:   Clicking a button still plays the click sound even if options.selectedSoundDisabled was set to true
-2025_18:   ContextMenu: Clicking any non-contextmenu submenu entry below the context menu, will select the submenu entry and close the submenu (but it should only close the contextmenu)