@@ -2,6 +2,9 @@
 [Added]
 -2025_32    Added  option "minDropdownWidth": Width of the dropdowns will be minimum this width (minimum width is 50, or 125 if the search editbox header is enabled. Attention: If the minDropdownWidth is > than the max it will overwrite the maximum dropdown width that way!)
 
+[Changed]
+--2025_33	Changed params of API function AddCustomScrollableSubMenuEntry(text, entries, callbackFunc) -> Added callbackFunc. If provided the submenu opening entry will use this callback function once clicked
+
 
 -v- ---------------LSM v2.35 - 2025-04-06--------------------------------------------------------------------------- -v-
 [Fixed]
